<resources>
    <string name="app_name">Wallpaper</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="image">Image</string>
    <string name="action_back">Action Back</string>
    <string name="no_results_found">No results found</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="download">Download</string>
    <string name="favorite">Favorite</string>
    <string name="there_are_no_any_favorite_contents">There are no any favorite contents</string>
    <string name="find_wallpaper">Find Wallpaper...</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="no_particular_favorites">No particular favorites ??</string>
    <string name="free_wallpapers">Free Wallpapers</string>
</resources>