<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="?attr/greenAccordingBg"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dimen_32dp">

            <LinearLayout
                android:id="@+id/toolbarContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"

                android:layout_marginEnd="@dimen/dimen_16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/dimen_48dp"
                    android:layout_height="@dimen/dimen_48dp"
                    android:contentDescription="@string/action_back"
                    android:padding="@dimen/dimen_12dp"
                    android:src="@drawable/ic_back"
                    app:tint="?attr/colorPrimaryVariant" />

                <TextView
                    android:id="@+id/favoritesTitle"
                    style="@style/LightHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/favorites"
                    android:textColor="?attr/colorPrimaryVariant" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/dimen_64dp"
                android:indeterminateDrawable="@drawable/style_progressbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarContainer" />

            <TextView
                android:id="@+id/notFoundTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/dimen_32dp"
                android:fontFamily="?attr/fontLight"
                android:gravity="center"
                android:text="@string/no_particular_favorites"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="@dimen/dimen_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
                tools:ignore="SpUsage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wallpaperRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarContainer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>